--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "surpress",
   "version": "1.0.0",
   "description": "Surpress other function calls within your class",
-  "main": "index.js",
+  "main": "main.js",
   "dependencies": {
     "babel-cli": "^6.4.5",
     "babel-preset-es2015": "^6.3.13"
@@ -13,10 +13,8 @@
     "babelify": "^7.2.0"
   },
   "scripts": {
-    "prebuild": "rm -rf lib",
-    "build": "browserify src/* -t babelify --outfile bundle.js",
-    "start": "node lib/main.js",
-    "prestart": "npm run build"
+    "example": "babel-node example/main.js",
+    "build": "babel src/mudecotex.js -o main.js",
   },
   "repository": {
     "type": "git",
