--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.1",
   "description": "Introducing decorators to control synchronisity",
   "main": "main.js",
-  "dependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-preset-es2015": "^6.3.13"
-  },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0"
+    "babelify": "^7.2.0",
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13"
   },
   "scripts": {
     "example": "babel-node example/main.js",
