--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "mudecotex",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Introducing decorators to control synchronisity",
   "main": "main.js",
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
-    "babel-cli": "^6.4.5",
-    "babel-preset-es2015": "^6.3.13"
+    "babel-cli": "^6.4.5"
   },
   "scripts": {
     "example": "babel-node example/main.js",
